replaced complicated shadowdom/slots with ng-content, fixed correctAnswers type to stream

--- a/libs/blocks/+example/component/example/example-view.html
+++ b/libs/blocks/+example/component/example/example-view.html
@@ -4,14 +4,14 @@
     {{ value }}
   </div>
 
-  <button class="action"
-          [disabled]="isCorrect"
-          (click)="inc()">
-    inc
-  </button>
-  <button class="action"
-          [disabled]="isCorrect"
-          (click)="dec()">
-    dec
-  </button>
+  <div class="actions">
+    <button [disabled]="isCorrect"
+            (click)="inc()">
+      inc
+    </button>
+    <button [disabled]="isCorrect"
+            (click)="dec()">
+      dec
+    </button>
+  </div>
 </div>
