--- a/libs/blocks/+example/component/example/example-view.scss
+++ b/libs/blocks/+example/component/example/example-view.scss
@@ -1,5 +1,10 @@
 .root {
+  width: 100px;
   padding: 10px;
+  border: 1px dashed peru;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .value {
@@ -12,8 +17,8 @@
   }
 }
 
-.action {
-  & + & {
-    margin-right: 10px;
-  }
+.actions {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
