--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -1,18 +1,18 @@
 <div *ngIf="initDone$ | async"
      class="blocks">
-  <sky-example id="example1">
-    <sky-example-answer>5</sky-example-answer>
-    <sky-example-answer>-3</sky-example-answer>
-  </sky-example>
+  <sky-input id="input1">
+    <sky-input-answer>test</sky-input-answer>
+    <sky-input-answer>smth here</sky-input-answer>
+  </sky-input>
 </div>
 
 <div class="controls">
   <div class="events">
     Events
 
-    - send (number)
+    - send
     <input type="text"
-            (input)="eventData = $event.target.value" />
+           (input)="eventData = $event.target.value" />
 
     <button (click)="sendEvent()">send</button>
 
@@ -20,10 +20,10 @@
 
     - log
     <div class="log">
-        <div *ngFor="let event of (events$ | async)"
-        class="event">
-      {{ event | json }}
-    </div>
+      <div *ngFor="let event of (events$ | async)"
+           class="event">
+        {{ event | json }}
+      </div>
     </div>
   </div>
 </div>
