--- a/libs/blocks/+input/component/input/input-view.scss
+++ b/libs/blocks/+input/component/input/input-view.scss
@@ -1,15 +1,34 @@
 .root {
   width: 100px;
   padding: 10px;
-  border: 1px dashed peru;
+  border: 1px dashed gray;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  &.-correct {
+    border-color: lightseagreen;
+  }
+
+  &.-wrong {
+    border-color: #ff2222;
+  }
+}
+
+.input-container {
+  width: 100%;
+  display: flex;
 }
 
 .input {
   min-width: 0;
   font-size: 14px;
+}
+
+.correct-answers {
+  font-size: 12px;
+  color: #808080;
 }
 
 .correct-answer {
