refactored added platform's score service and component, fixed some blocks scoring api

--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -1,3 +1,4 @@
+
 <div *ngIf="initDone$ | async"
      class="blocks">
   <sky-input id="input1">
@@ -5,6 +6,8 @@
     <sky-input-answer>smth here</sky-input-answer>
   </sky-input>
 </div>
+
+<score></score>
 
 <div class="controls">
   <div class="events">
