--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -4,6 +4,8 @@
   <sky-input id="input1">
     <sky-input-answer>test</sky-input-answer>
     <sky-input-answer>smth here</sky-input-answer>
+    <sky-input-answer>more</sky-input-answer>
+    <sky-input-answer>answer</sky-input-answer>
   </sky-input>
 </div>
 
