refactored Sync class to BlockSyncService and BlockBaseSyncStrategy, moved sync code from input block to sync strategy

--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -17,9 +17,9 @@
 
     <br>
 
-    - send (data)
+    - send
     <input type="text"
-           style="width: 300px;"
+           style="width: 600px;"
            (input)="eventData = $event.target.value" />
 
     <button (click)="sendEvent()">send</button>
