--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -1,12 +1,14 @@
 
 <div *ngIf="initDone$ | async"
      class="blocks">
-  <sky-input id="input1">
-    <sky-input-answer>test</sky-input-answer>
-    <sky-input-answer>smth here</sky-input-answer>
-    <sky-input-answer>more</sky-input-answer>
-    <sky-input-answer>answer</sky-input-answer>
-  </sky-input>
+  <sky-block-group [attr.config]="config$ | async">
+    <sky-input id="input1">
+      <sky-input-answer>test</sky-input-answer>
+      <sky-input-answer>smth here</sky-input-answer>
+      <sky-input-answer>more</sky-input-answer>
+      <sky-input-answer>answer</sky-input-answer>
+    </sky-input>
+  </sky-block-group>
 </div>
 
 <score></score>
