added ScoreIndicator component and it's usage to input block

--- a/libs/blocks/+input/component/input/input-view.html
+++ b/libs/blocks/+input/component/input/input-view.html
@@ -27,4 +27,8 @@
        class="correct-answer">
     {{ value }}
   </div>
+
+  <sky-block-score-indicator class="score"
+                             [blockId]="blockId">
+  </sky-block-score-indicator>
 </div>
