--- a/libs/blocks/+input/component/input/input-view.scss
+++ b/libs/blocks/+input/component/input/input-view.scss
@@ -1,4 +1,5 @@
 .root {
+  position: relative;
   width: 100px;
   padding: 10px;
   border: 1px dashed gray;
@@ -36,4 +37,10 @@
   font-size: 18px;
   font-weight: 600;
   color: lightseagreen;
+}
+
+.score {
+  position: absolute;
+  top: 10px;
+  right: 2px;
 }
