--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -1,13 +1,13 @@
 <div class="blocks">
   <sky-block-group [attr.config]="config">
-    <sky-input id="input-1">
+    <!-- <sky-input id="input-1">
       <sky-input-answer>test</sky-input-answer>
       <sky-input-answer>smth here</sky-input-answer>
       <sky-input-answer>more</sky-input-answer>
       <sky-input-answer>answer</sky-input-answer>
-    </sky-input>
+    </sky-input> -->
 
-    <!-- <sky-order-word id="ordw-1">
+    <sky-order-word id="ordw-1">
       <sky-order-word-item answer-id="ordw-item-1">s</sky-order-word-item>
       <sky-order-word-item answer-id="ordw-item-2">o</sky-order-word-item>
       <sky-order-word-item answer-id="ordw-item-3">m</sky-order-word-item>
@@ -17,7 +17,7 @@
       <sky-order-word-item answer-id="ordw-item-7">i</sky-order-word-item>
       <sky-order-word-item answer-id="ordw-item-8">n</sky-order-word-item>
       <sky-order-word-item answer-id="ordw-item-9">g</sky-order-word-item>
-    </sky-order-word> -->
+    </sky-order-word>
   </sky-block-group>
 </div>
 
