OrderWord's scoring workaround

--- a/projects/platform/src/score/component/score/score-view.html
+++ b/projects/platform/src/score/component/score/score-view.html
@@ -1,4 +1,4 @@
 <div class="root">
   <b>Score:</b>
-  right {{ right }} | wrong {{ wrong }} | remain {{ remain }}
+  right {{ right }} | wrong {{ wrong }} | remaining {{ remaining }}
 </div>
