--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -8,15 +8,14 @@
     </sky-input> -->
 
     <sky-order-word id="ordw-1">
-      <sky-order-word-item answer-id="ordw-item-1">s</sky-order-word-item>
-      <sky-order-word-item answer-id="ordw-item-2">o</sky-order-word-item>
-      <sky-order-word-item answer-id="ordw-item-3">m</sky-order-word-item>
-      <sky-order-word-item answer-id="ordw-item-4">e</sky-order-word-item>
-      <sky-order-word-item answer-id="ordw-item-5">t</sky-order-word-item>
-      <sky-order-word-item answer-id="ordw-item-6">h</sky-order-word-item>
-      <sky-order-word-item answer-id="ordw-item-7">i</sky-order-word-item>
-      <sky-order-word-item answer-id="ordw-item-8">n</sky-order-word-item>
-      <sky-order-word-item answer-id="ordw-item-9">g</sky-order-word-item>
+      <sky-order-word-item answer-id="ordw-item-1">h</sky-order-word-item>
+      <sky-order-word-item answer-id="ordw-item-2">i</sky-order-word-item>
+      <sky-order-word-item answer-id="ordw-item-3">j</sky-order-word-item>
+      <sky-order-word-item answer-id="ordw-item-4">a</sky-order-word-item>
+      <sky-order-word-item answer-id="ordw-item-5">c</sky-order-word-item>
+      <sky-order-word-item answer-id="ordw-item-6">k</sky-order-word-item>
+      <sky-order-word-item answer-id="ordw-item-7">e</sky-order-word-item>
+      <sky-order-word-item answer-id="ordw-item-8">r</sky-order-word-item>
     </sky-order-word>
   </sky-block-group>
 </div>
