--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -1,11 +1,11 @@
 <div class="blocks">
   <sky-block-group [attr.config]="config">
-    <!-- <sky-input id="input-1">
+    <sky-input id="input-1">
       <sky-input-answer>test</sky-input-answer>
       <sky-input-answer>smth here</sky-input-answer>
       <sky-input-answer>more</sky-input-answer>
       <sky-input-answer>answer</sky-input-answer>
-    </sky-input> -->
+    </sky-input>
 
     <sky-order-word id="ordw-1">
       <sky-order-word-item answer-id="ordw-item-1">h</sky-order-word-item>
@@ -17,6 +17,13 @@
       <sky-order-word-item answer-id="ordw-item-7">e</sky-order-word-item>
       <sky-order-word-item answer-id="ordw-item-8">r</sky-order-word-item>
     </sky-order-word>
+
+    <sky-input id="input-2">
+      <sky-input-answer>test</sky-input-answer>
+      <sky-input-answer>smth here</sky-input-answer>
+      <sky-input-answer>more</sky-input-answer>
+      <sky-input-answer>answer</sky-input-answer>
+    </sky-input>
   </sky-block-group>
 </div>
 
