--- a/projects/platform/src/app/component/app/app.scss
+++ b/projects/platform/src/app/component/app/app.scss
@@ -1,5 +1,13 @@
 .blocks {
   margin-bottom: 30px;
+
+  > * {
+    display: flex;
+  }
+
+  > * > * {
+    margin-right: 20px;
+  }
 }
 
 .controls {
