added dnd-group base components/interfaces/model

--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -1,6 +1,6 @@
 <div class="blocks">
   <sky-block-group [attr.config]="config">
-    <sky-input id="input-1">
+    <!-- <sky-input id="input-1">
       <sky-input-answer>test</sky-input-answer>
       <sky-input-answer>smth here</sky-input-answer>
       <sky-input-answer>more</sky-input-answer>
@@ -23,7 +23,38 @@
       <sky-input-answer>smth here</sky-input-answer>
       <sky-input-answer>more</sky-input-answer>
       <sky-input-answer>answer</sky-input-answer>
-    </sky-input>
+    </sky-input> -->
+
+    <sky-dnd-group id="m684485DC">
+      <sky-dnd-group-drags>
+        <sky-dnd-group-drag answer-id="c75964bc">
+          sm<b>u</b>ggling
+        </sky-dnd-group-drag>
+        <sky-dnd-group-drag answer-id="aea98fd7">
+          p<b>u</b>nishment
+        </sky-dnd-group-drag>
+        <sky-dnd-group-drag answer-id="231f3258">
+          b<b>ur</b>gle
+        </sky-dnd-group-drag>
+        <sky-dnd-group-drag answer-id="36b0bf6e">
+          m<b>ur</b>der
+        </sky-dnd-group-drag>
+        <sky-dnd-group-drag answer-id="68b84c10">
+          mansl<b>au</b>ghter
+        </sky-dnd-group-drag>
+      </sky-dnd-group-drags>
+      <sky-dnd-group-groups>
+        <sky-dnd-group-item drag-ids="c75964bc,aea98fd7" group-id="12485008">
+          [ʌ]
+        </sky-dnd-group-item>
+        <sky-dnd-group-item drag-ids="231f3258,36b0bf6e" group-id="2225776f">
+          [ɜː]
+        </sky-dnd-group-item>
+        <sky-dnd-group-item drag-ids="68b84c10" group-id="f3941887">
+          [ɔː]
+        </sky-dnd-group-item>
+      </sky-dnd-group-groups>
+    </sky-dnd-group>
   </sky-block-group>
 </div>
 
