--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -27,30 +27,30 @@
 
     <sky-dnd-group id="m684485DC">
       <sky-dnd-group-drags>
-        <sky-dnd-group-drag answer-id="c75964bc">
+        <sky-dnd-group-drag answer-id="drag1">
           sm<b>u</b>ggling
         </sky-dnd-group-drag>
-        <sky-dnd-group-drag answer-id="aea98fd7">
+        <sky-dnd-group-drag answer-id="drag2">
           p<b>u</b>nishment
         </sky-dnd-group-drag>
-        <sky-dnd-group-drag answer-id="231f3258">
+        <sky-dnd-group-drag answer-id="drag3">
           b<b>ur</b>gle
         </sky-dnd-group-drag>
-        <sky-dnd-group-drag answer-id="36b0bf6e">
+        <sky-dnd-group-drag answer-id="drag4">
           m<b>ur</b>der
         </sky-dnd-group-drag>
-        <sky-dnd-group-drag answer-id="68b84c10">
+        <sky-dnd-group-drag answer-id="drag5">
           mansl<b>au</b>ghter
         </sky-dnd-group-drag>
       </sky-dnd-group-drags>
       <sky-dnd-group-groups>
-        <sky-dnd-group-item drag-ids="c75964bc,aea98fd7" group-id="12485008">
+        <sky-dnd-group-item drag-ids="drag1,drag2" group-id="drop1">
           [<b>ʌ</b>]
         </sky-dnd-group-item>
-        <sky-dnd-group-item drag-ids="231f3258,36b0bf6e" group-id="2225776f">
+        <sky-dnd-group-item drag-ids="drag3,drag4" group-id="drop2">
           [ɜː]
         </sky-dnd-group-item>
-        <sky-dnd-group-item drag-ids="68b84c10" group-id="f3941887">
+        <sky-dnd-group-item drag-ids="drag5" group-id="drop3">
           [ɔː]
         </sky-dnd-group-item>
       </sky-dnd-group-groups>
