--- a/libs/blocks/+dnd-group/component/dnd-group-drag-item/dnd-group-drag-item.scss
+++ b/libs/blocks/+dnd-group/component/dnd-group-drag-item/dnd-group-drag-item.scss
@@ -1,4 +1,9 @@
 .root {
+  display: flex;
+  align-items: center;
+}
+
+.text {
   padding: 5px;
   border-radius: 4px;
   background-color: mix(#5d9cec, #ffffff, 16%);
@@ -32,4 +37,8 @@
       background-color: mix(#ff6666, #ffffff, 8%);
     }
   }
+}
+
+.score {
+  margin-left: 5px;
 }
