added completed state to dnd-group block

--- a/libs/blocks/+dnd-group/component/dnd-group/dnd-group-view.html
+++ b/libs/blocks/+dnd-group/component/dnd-group/dnd-group-view.html
@@ -1,6 +1,8 @@
 <div class="root"
-     [class.-mobile]="isMobile">
-  <div class="drags">
+     [class.-mobile]="isMobile"
+     [class.-completed]="isCompleted">
+  <div *ngIf="!isCompleted"
+       class="drags">
     <sky-dnd-group-drag-item *ngFor="let dragItem of dragItems"
                              [dragItem]="dragItem"
                              [draggingId]="draggingId"
