enabled all blocks in app.html

--- a/projects/platform/src/app/component/app/app.html
+++ b/projects/platform/src/app/component/app/app.html
@@ -1,6 +1,6 @@
 <div class="blocks">
   <sky-block-group [attr.config]="config">
-    <!-- <sky-input id="input-1">
+    <sky-input id="input-1">
       <sky-input-answer>test</sky-input-answer>
       <sky-input-answer>smth here</sky-input-answer>
       <sky-input-answer>more</sky-input-answer>
@@ -23,7 +23,7 @@
       <sky-input-answer>smth here</sky-input-answer>
       <sky-input-answer>more</sky-input-answer>
       <sky-input-answer>answer</sky-input-answer>
-    </sky-input> -->
+    </sky-input>
 
     <sky-dnd-group id="m684485DC">
       <sky-dnd-group-drags>
